--- a/composer.json
+++ b/composer.json
@@ -3,6 +3,7 @@
     "description": "Instagram reels video downloader",
     "type": "library",
     "require": {
+        "php": "^8.0",
         "symfony/browser-kit": "^6.3",
         "symfony/http-client": "^6.3",
         "symfony/css-selector": "^6.3",
